k8s/user-ms/user-ms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: user-ms
  name: user-ms
spec:
  replicas: 4
  selector:
    matchLabels:
      io.kompose.service: user-ms
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/kompose-default: "true"
        io.kompose.service: user-ms
    spec:
      containers:
        - env:
            - name: AMQP_URL
              value: amqp://guest:guest@rabbitmq:5672
            - name: QUEUE
              value: event_driven
          image: ksericpro/user-ms:1.0.0
          name: user-ms
          ports:
            - containerPort: 8000
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /app/src
              name: user-ms-claim0
      restartPolicy: Always
      volumes:
        - name: user-ms-claim0
          persistentVolumeClaim:
            claimName: user-ms-claim0
status: {}
