k8s/user-ms/service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-ms-service
  namespace: ingress-nginx
spec:
  selector:
    app: user-ms
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30010
  type: LoadBalancer
