k8s/user-ms/user-ms-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: user-ms
  name: user-ms
  namespace: ingress-nginx
spec:
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30009
  type: LoadBalancer
  selector:
    io.kompose.service: user-ms
status:
  loadBalancer: {}
